--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Aldo Herrera-Rodulfo</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=cv_github.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/view?usp=share_link&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
