--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview" width="100%" height="480"></iframe>
+
