--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
 <head>
     <title>Aldo HerreraRodulfo</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        iframe {
+            width: 100%;
+            max-width: 800px;
+            height: 480px;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview" width="100%" height="880"></iframe>
+    <iframe src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview"></iframe>
 </body>
 </html>
