--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Aldo HerreraRodulfo</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
+        #myPDF {
+            width: 85%;
+            height: 975px;
         }
 
-        iframe {
-            width: 100%;
-            max-width: 800px;
-            height: 480px;
-        }
     </style>
 </head>
 <body>
-    <iframe src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview"></iframe>
+    <iframe id="myPDF" src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview"></iframe>
 </body>
 </html>
