--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         #myPDF {
             width: 100%;
-            height: 1080px;
+            height: 100%;
         }
 
     </style>
