--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <title>Aldo HerreraRodulfo</title>
     <style>
-        #myPDF {
+        #pdf {
             width: 100%;
             height: 100%;
         }
-
     </style>
 </head>
 <body>
-    <iframe id="myPDF" src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview"></iframe>
+    <iframe id="pdf" src="https://drive.google.com/file/d/1eU-9G_zrjUgYSO7Iwh2jqdI-evXYoWmM/preview"></iframe>
 </body>
 </html>
