--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <title>Aldo HerreraRodulfo</title>
     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            overflow: hidden; /* Prevent scrollbars */
+        }
         #pdf {
             width: 100%;
             height: 100%;
+            border: none; /* Remove iframe border */
         }
     </style>
 </head>
