--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         body, html {
             height: 100%;
             margin: 0;
-            overflow: hidden; /* Prevent scrollbars */
         }
         #pdf {
+            position: absolute;
             width: 100%;
             height: 100%;
-            border: none; /* Remove iframe border */
+            top: 0;
+            left: 0;
+            border: none;
         }
     </style>
 </head>
