--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe id="pdf" src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
 </body>
 </html>
