--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <html lang="en">
 <head>
     <title>Aldo HerreraRodulfo</title>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        #pdf {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            border: none;
-        }
-    </style>
 </head>
 <body>
-    <iframe id="pdf" src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
 </body>
 </html>
