--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Aldo HerreraRodulfo</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
+    <iframe src="https://github.com/YourUsername/YourRepository/raw/main/your-pdf-file.pdf" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
+
