--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Aldo HerreraRodulfo</title>
 </head>
 <body>
-    <iframe src="https://github.com/YourUsername/YourRepository/raw/main/your-pdf-file.pdf" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vRIgIFob5YH3zfJ7bWYQxBp3cE18gAlO3x4jW_POA6aWQBzCR5i-MWkrWje3SCHhTOnaglCy8gQCFPA/pub?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
 
