--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <title>Aldo HerreraRodulfo</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #doc-container {
+            width: 100%;
+            max-width: 800px; /* Adjust this value to limit the maximum width of the Google Docs file */
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vRIgIFob5YH3zfJ7bWYQxBp3cE18gAlO3x4jW_POA6aWQBzCR5i-MWkrWje3SCHhTOnaglCy8gQCFPA/pub?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <div id="doc-container">
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRIgIFob5YH3zfJ7bWYQxBp3cE18gAlO3x4jW_POA6aWQBzCR5i-MWkrWje3SCHhTOnaglCy8gQCFPA/pub?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
+    </div>
 </body>
 </html>
-
