--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-color: #f0f0f0; /* Set a background color */
         }
         #doc-container {
             width: 100%;
             max-width: 800px; /* Adjust this value to limit the maximum width of the Google Docs file */
+            background-color: #fff; /* Set a white background color */
+            padding: 20px; /* Add some padding for spacing */
         }
         iframe {
             width: 100%;
@@ -23,7 +26,8 @@
 </head>
 <body>
     <div id="doc-container">
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRIgIFob5YH3zfJ7bWYQxBp3cE18gAlO3x4jW_POA6aWQBzCR5i-MWkrWje3SCHhTOnaglCy8gQCFPA/pub?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
     </div>
 </body>
 </html>
+
