--- a/index.html
+++ b/index.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width:100%; height:100%;">
 <head>
-    <title>Aldo HerreraRodulfo</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0; /* Set a background color */
-        }
-        #doc-container {
-            width: 100%;
-            max-width: 800px; /* Adjust this value to limit the maximum width of the Google Docs file */
-            background-color: #fff; /* Set a white background color */
-            padding: 20px; /* Add some padding for spacing */
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Aldo HerreraRodulfo</title>
 </head>
-<body>
-    <div id="doc-container">
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz/pub?embedded=true"></iframe>
-    </div>
-</body>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url=https://drive.google.com/drive/folders/14G7339RjYvcEy2R6gefSFcJhH0CA8nF7" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
-
+ 
