--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" style="width:100%; height:100%;">
+<html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Aldo HerreraRodulfo</title>
+    <title>Aldo HerreraRodulfo</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://drive.google.com/drive/folders/14G7339RjYvcEy2R6gefSFcJhH0CA8nF7" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+    <iframe src="https://docs.google.com/gview?url=https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz&embedded=true" style="width: 100%; height: 100vh;" frameborder="0"></iframe>
+</body>
 </html>
- 
