--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Aldo HerreraRodulfo</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/gview?url=https://docs.google.com/document/d/e/2PACX-1vTVs3bsafgcXZUR7gsWI8EmPQKWGGkRaR8UUbHzb77s4EP_HlBsnNHV8iAkSorDNAHM1Os6eLj_KkMz&embedded=true" style="width: 100%; height: 100vh;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/aldhr/aldhr.github.io/blob/main/cv_on_github.pdf&embedded=true" style="width: 100%; height: 100vh;" frameborder="0"></iframe>
 </body>
 </html>
