--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Aldo HerreraRodulfo</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/gview?url=https://github.com/aldhr/aldhr.github.io/blob/main/cv_on_github.pdf&embedded=true" style="width: 100%; height: 100vh;" frameborder="0"></iframe>
+    <iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" width="640" height="480" allow="autoplay"></iframe>
 </body>
 </html>
