--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" width="100%" height="100%" allow="autoplay"></iframe>
