--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" width="100%" height="100%" allow="autoplay"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Aldo HerreraRodulfo</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" allow="autoplay"></iframe>
+</body>
+</html>
