--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width:100%; height:100%;">
 <head>
-    <title>Aldo HerreraRodulfo</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Aldo HR CV</title>
 </head>
-<body>
-    <iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" allow="autoplay"></iframe>
-</body>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://drive.google.com/file/d/1rWZuU5bPsKvzHsgHBxGt9hCCTkHF_HVL/preview" allow="autoplay" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
