--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Aldo HR CV</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://drive.google.com/file/d/1KvrysHcE1MGsykfer4O_EanPpKAliOmy/view?usp=sharing" allow="autoplay" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://drive.google.com/file/d/1KvrysHcE1MGsykfer4O_EanPpKAliOmy/preview" allow="autoplay" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
