upload all files for webpage

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <span class="line mb-5"></span>
                 <h5 class="mb-3"> I like to think of myself as a curious and self-motivated scientist that enjoys discovering things.</h5>
                 <p class="mt-20"> 
-                Lately, I have focused my career on computational experiments. Although most of my projects are focused on 
-                protein-ligand interactions and single-protein dynamics, I have participated in other projects related to applying 
-                or developing codes to be useful in the analysis of genetics, biochemistry, bioinformatics, chemoinformatics, 
-                machine and deep learning.</p>
+                I have focused my career on computational tools for the analysis of biomolecular systems. My projects are strongly
+                related to molecular modelling and simulations of single-protein dynamics and protein-ligand interactions. However,
+                I have also participate in other projects for the analysis (and/or code developing for analysis) of genetic, biochemical, and 
+                chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
                 
                 <a href="./cv.pdf" target="_blank">Display standard CV</a>
                 
