--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p class="mt-20"> 
                 I have focused my career on computational tools for the analysis of biomolecular systems. My projects are strongly
                 related to molecular modelling and simulations of single-protein dynamics and protein-ligand interactions. However,
-                I have also participate in other projects for the analysis (and/or code developing for analysis) of genetic, biochemical, and 
+                I have also participated in other projects for the analysis (and/or code developing for the analysis) of genetic, biochemical, and 
                 chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
                 
                 <a href="./cv.pdf" target="_blank">Display standard CV</a>
