--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ sciences.</strong></P>
                             Research and Advance Studies (CINVESTAV). Monterrey, México - 2019</P>
                             <hr>
                             <h6 class="title text-danger">2017</h6>
-                            <P><strong>>Undergard research experience</strong></P>
-                            Undergard research internships at laboratory dedicated research on
+                            <P><strong>>Undergard Research Experience</strong></P>
+                            Undergard research internship at a laboratory dedicated to research on
                             organic systhesis of compounds with potential pharmacological activity</P>
                         </div>
                     </div>
