--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-rocket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Prefered programming languages</h6>
-                        <p class="subtitle">Python, R, Bash (LINUX/UNIX)</p>
+                        <p class="subtitle">Python, R, Bash-Scripting (LINUX/UNIX)</p>
                         <hr>
                     </div>
                 </div>
