--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Molecular modelling & simulations</h6>
-                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock, 
+                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock, VINA, CB-Dock, 4ppppMGLTools,
                         PyMol, Rosetta software, AlphaFold, LIGPLOT, swiss-model, Avogadro, BIOVIA </p>
                         <hr>
                     </div>
