--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Molecular modelling & simulations</h6>
-                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock, VINA, CB-Dock, 4ppppMGLTools,
+                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock, VINA, CB-Dock, MGLTools,
                         PyMol, Rosetta software, AlphaFold, LIGPLOT, swiss-model, Avogadro, BIOVIA </p>
                         <hr>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-rocket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Prefered programming languages</h6>
-                        <p class="subtitle">Python, R, Bash-Scripting (LINUX/UNIX)</p>
+                        <p class="subtitle">Python, R, Bash-Scripting, VIM, tmux (LINUX/UNIX)</p>
                         <hr>
                     </div>
                 </div>
