--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ sciences.</strong></P>
                             Research and Advance Studies (CINVESTAV). Monterrey, México - 2019</P>
                             <hr>
                             <h6 class="title text-danger">2017</h6>
-                            <P><strong>>Undergard Research Experience</strong></P>
+                            <P><strong>>Undergrad Research Experience</strong></P>
                             Undergard research internship at a laboratory dedicated to research on
                             organic systhesis of compounds with potential pharmacological activity at
 			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
