--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ sciences.</strong></P>
                             <hr>
                             <h6 class="title text-danger">2017</h6>
                             <P><strong>>Undergrad Research Experience</strong></P>
-                            Undergard research internship at a laboratory dedicated to research on
+                            Undergrad research internship at a laboratory dedicated to research on
                             organic systhesis of compounds with potential pharmacological activity at
 			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
                         </div>
