--- a/index.html
+++ b/index.html
@@ -224,8 +224,35 @@ sciences.</strong></P>
 			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
                         </div>
                     </div>
-            
                 </div>
+		 <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                       <div class="card-header">
+                            <div class="mt-2">
+                                <h4>Interships & Awards</h4>
+                                <span class="line"></span>
+                            </div>  
+                        </div>
+                        <div class="card-body">
+                            <h6 class="title text-danger">2023</h6>
+                            <P>><strong>Research stay on deep learning graph-neural networks 
+                            and honored to be awarded the HIDA's Helmholtz Visiting Researcher Grant.</strong></P>
+                            <P class="subtitle">Research stay at Drug Bioinformatics at Helmholtz Institute for Pharmaceutical Research Saarland
+				(WIBI, HIPS). Saarbrücken, Germany - 2023</P>
+                            <hr>
+                            <h6 class="title text-danger">2019</h6>
+                            <P><strong>>Practical and theoretical course on molecular modelling and dynamics</strong></P>
+                            <P class="subtitle">Research stay at Biomolecular diversity group at Center for
+                            Research and Advance Studies (CINVESTAV). Monterrey, México - 2019</P>
+                            <hr>
+                            <h6 class="title text-danger">2017</h6>
+                            <P><strong>>Undergrad Research Experience</strong></P>
+                            Undergrad research internship at a laboratory dedicated to research on
+                            organic systhesis of compounds with potential pharmacological activity at
+			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
+                        </div>
+                    </div>
+		 </div>
             </div>
         </div>
 
