--- a/index.html
+++ b/index.html
@@ -225,34 +225,56 @@ sciences.</strong></P>
                         </div>
                     </div>
                 </div>
-		 <div class="col-md-6 col-lg-4">
+ <!--Resume Section-->
+    <section class="section" id="resume">
+        <div class="container">
+            <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Interships & Awards</h4>
-                                <span class="line"></span>
-                            </div>  
+                                <h4>Peer-reviewed publications</h4>
+                                <span class="line"></span>  
+                            </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2023</h6>
-                            <P>><strong>Research stay on deep learning graph-neural networks 
-                            and honored to be awarded the HIDA's Helmholtz Visiting Researcher Grant.</strong></P>
-                            <P class="subtitle">Research stay at Drug Bioinformatics at Helmholtz Institute for Pharmaceutical Research Saarland
-				(WIBI, HIPS). Saarbrücken, Germany - 2023</P>
+                            <h6 class="title text-danger">2022</h6>
+                            <P></P>
+                            <P class="subtitle">
+                            <strong>Herrera-Rodulfo, A.,</strong>
+                            Andrade-Medina, M., & Carrillo-Tripp, M. (2022).
+                            <strong>Repurposing Drugs as Potential Therapeutics for the SARS-Cov-2 Viral Infection:
+				Automatizing a Blind Molecular Docking High-throughput Pipeline. </strong>
+                            In biomedical Engineering. IntechOpen [Book chapter].
+				https://doi.org/10.5772/intechopen.105792</P>
+				
+				</P>del Rayo Camacho-Corona, M., Camacho-Morales, A.,Góngora-Rivera, F., Escamilla-García, 
+				E., Morales-Landa, J. L., Andrade-Medina, M., <strong>Herrera-Rodulfo, A.,</strong> García-Juárez, M.,
+				García-Espinosa, P., Stefani, T., González-Barranco, P., & Carrillo-Tripp, M. (2022).
+				<strong>Immunomodulatory Effects of Allium sativum L. and its Constituents against Viral Infections
+				and Metabolic Diseases. </strong> 
+				In Current Topics in Medicinal Chemistry (Vol. 22,
+				Issue 2, pp. 109–131). Bentham Science Publishers Ltd.
+				https://doi.org/10.2174/1568026621666211122163156</P>
+
                             <hr>
-                            <h6 class="title text-danger">2019</h6>
-                            <P><strong>>Practical and theoretical course on molecular modelling and dynamics</strong></P>
-                            <P class="subtitle">Research stay at Biomolecular diversity group at Center for
-                            Research and Advance Studies (CINVESTAV). Monterrey, México - 2019</P>
-                            <hr>
-                            <h6 class="title text-danger">2017</h6>
-                            <P><strong>>Undergrad Research Experience</strong></P>
-                            Undergrad research internship at a laboratory dedicated to research on
-                            organic systhesis of compounds with potential pharmacological activity at
-			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
+                            <h6 class="title text-danger">2021</h6>
+                            <P></P>
+                            <P class="subtitle">
+                            <strong>Herrera-Rodulfo, A.,</strong>
+                            Carrillo-Tripp, M., Laura Yeverino-Gutierrez, M.,
+				Peñuelas-Urquides, K., Adiene González-Escalante, L., Bermúdez de León, M., &
+				Silva-Ramirez, B. (2021). 
+				<strong>NAT2 polymorphisms associated with the development
+				of hepatotoxicity after first-line tuberculosis treatment in Mexican patients:
+				From genotype to molecular structure characterization. </strong>
+				In Clinica Chimica Acta (Vol. 519, pp. 153–162). 
+				Elsevier BV. https://doi.org/10.1016/j.cca.2021.04.017</P>
+
                         </div>
                     </div>
-		 </div>
+                </div>
             </div>
         </div>
 
