--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ sciences.</strong></P>
  <!--Resume Section-->
     <section class="section" id="resume">
         <div class="container">
-            <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
+            <h2 class="mb-5">scientific <span class="text-danger">communication</span> activities</h2>   
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
