--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ sciences.</strong></P>
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Peer-reviewed publications</h4>
+                                <h4>Divulgation projects</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
@@ -242,35 +242,28 @@ sciences.</strong></P>
                             <h6 class="title text-danger">2022</h6>
                             <P></P>
                             <P class="subtitle">
-                            <strong>Herrera-Rodulfo, A.,</strong>
-                            Andrade-Medina, M., & Carrillo-Tripp, M. (2022).
-                            <strong>Repurposing Drugs as Potential Therapeutics for the SARS-Cov-2 Viral Infection:
-				Automatizing a Blind Molecular Docking High-throughput Pipeline. </strong>
-                            In biomedical Engineering. IntechOpen [Book chapter].
-				https://doi.org/10.5772/intechopen.105792</P>
+			    I also enjoy participating in activities related to teaching science and divulgation. 
+			    Here I’ll list a few projects that I was lucky to be part of.  </P>
 				
-				</P>del Rayo Camacho-Corona, M., Camacho-Morales, A.,Góngora-Rivera, F., Escamilla-García, 
-				E., Morales-Landa, J. L., Andrade-Medina, M., <strong>Herrera-Rodulfo, A.,</strong> García-Juárez, M.,
-				García-Espinosa, P., Stefani, T., González-Barranco, P., & Carrillo-Tripp, M. (2022).
-				<strong>Immunomodulatory Effects of Allium sativum L. and its Constituents against Viral Infections
-				and Metabolic Diseases. </strong> 
-				In Current Topics in Medicinal Chemistry (Vol. 22,
-				Issue 2, pp. 109–131). Bentham Science Publishers Ltd.
-				https://doi.org/10.2174/1568026621666211122163156</P>
+			    </P><strong>>Who stole the virus? | I helped to solve a mystery at the BMD lab.</strong>
+			    I have participated in two editions (2022 and 2023) of "Who stole the virus?". 
+			    A didactic course that employs in-vitro and in-silico tools to solve a well-planned mystery by master's students
+			    of the master program in biology education for citizen formation at the Center of Research and Advanced Studies of 
+			    the National Polytechnic Institute (CINVESTAV-IPN). My contribution includes day-to-day consulting and conferences 
+			    and workshops on bioinformatic analysis of genomic sequences. </P>
 
-                            <hr>
-                            <h6 class="title text-danger">2021</h6>
-                            <P></P>
-                            <P class="subtitle">
-                            <strong>Herrera-Rodulfo, A.,</strong>
-                            Carrillo-Tripp, M., Laura Yeverino-Gutierrez, M.,
-				Peñuelas-Urquides, K., Adiene González-Escalante, L., Bermúdez de León, M., &
-				Silva-Ramirez, B. (2021). 
-				<strong>NAT2 polymorphisms associated with the development
-				of hepatotoxicity after first-line tuberculosis treatment in Mexican patients:
-				From genotype to molecular structure characterization. </strong>
-				In Clinica Chimica Acta (Vol. 519, pp. 153–162). 
-				Elsevier BV. https://doi.org/10.1016/j.cca.2021.04.017</P>
+			    </P><strong>>How small a virus is? | How do students perceive the size of small entities?. </strong>
+			    Sometimes the size of the biological world is not as intuitive as we think. I was part of a team that help out 
+			    high-school students to deeper understand how small entities are more fun than they thought, we used audiovisuals,
+			    graphic storyboards, paper virus models at the week of science, art and technology at Roberto Rocca technical school
+			    (8 and 9 of June 2022) in a workshop named: “A trial to a virus: the small and the very small”.  </P>
+
+			    </P><strong>>What motivated me to do science? | I shared my experience with the future teachers of biology students.  </strong>
+                            I was invited as a member of the Biomolecular Diversity Lab to share my experience as a science student.
+			    I share my motivations to do science, and what I enjoy about it. Then, I also helped the project-leaders to analyze the results of 
+			    this course (throughout biology trainee teachers drawings!). This was part of a course of nature of sciences at the benemerit and 
+			    centenary school for future teachers of Jalisco (ByCENJ). </P>
+                          
 
                         </div>
                     </div>
