--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ sciences.</strong></P>
  <!--Resume Section-->
     <section class="section" id="resume">
         <div class="container">
-            <h2 class="mb-5">scientific <span class="text-danger">communication</span> activities</h2>   
+            <h2 class="mb-5">Scientific <span class="text-danger">communication</span> activities</h2>   
             <div class="row">
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-8">
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
