--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ sciences.</strong></P>
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2022</h6>
+                            <h6 class="title text-danger"></h6>
                             <P></P>
                             <P class="subtitle">
 			    I also enjoy participating in activities related to teaching science and divulgation. 
