--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-rocket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Prefered programming languages</h6>
+                        <h6>Preferred programming languages</h6>
                         <p class="subtitle">Python, R, Bash-Scripting, VIM, tmux (LINUX/UNIX)</p>
                         <hr>
                     </div>
