--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ sciences.</strong></P>
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Interships & Awards</h4>
+                                <h4>Internships & Awards</h4>
                                 <span class="line"></span>
                             </div>  
                         </div>
