--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ sciences.</strong></P>
                             <h6 class="title text-danger">2017</h6>
                             <P><strong>>Undergrad Research Experience</strong></P>
                             Undergrad research internship at a laboratory dedicated to research on
-                            organic systhesis of compounds with potential pharmacological activity at
+                            organic synthesis of compounds with potential pharmacological activity at
 			    the Faculty of Chemistry at Autonomous University of Nuevo León (FCQ, UANL).</P>
                         </div>
                     </div>
