--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h5 class="mb-3"> I like to think of myself as a curious and self-motivated scientist that enjoys discovering things.</h5>
                 <p class="mt-20"> 
                 I have focused my career on computational tools for the analysis of biomolecular systems. My projects are strongly
-                related to molecular modelling and simulations of single-protein dynamics and protein-ligand interactions. However,
+                related to molecular modelling, simulations of single-protein dynamics and protein-ligand interactions. However,
                 I have also participated in other projects for the analysis (and/or code developing for the analysis) of genetic, biochemical, and 
                 chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
                 
