--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ sciences.</strong></P>
                             <h6 class="title text-danger">2023</h6>
                             <P>><strong>Research stay on deep learning graph-neural networks 
                             and honored to be awarded the HIDA's Helmholtz Visiting Researcher Grant.</strong></P>
-                            <P class="subtitle">Research stay at Drug Bioinformatics at Helmholtz Institute for Pharmaceutical Research Saarland
+                            <P class="subtitle">Research stay in the Drug Bioinformatics group at Helmholtz Institute for Pharmaceutical Research Saarland
 				(WIBI, HIPS). Saarbrücken, Germany - 2023</P>
                             <hr>
                             <h6 class="title text-danger">2019</h6>
