--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <h5 class="mb-3"> I like to think of myself as a curious and self-motivated scientist that enjoys discovering things.</h5>
                 <p class="mt-20"> 
                 I have focused my career on computational tools for the analysis of biomolecular systems. My projects are strongly
-                related to molecular modelling, simulations of single-protein dynamics and protein-ligand interactions. However,
-                I have also participated in other projects for the analysis (and/or code developing for the analysis) of genetic, biochemical, and 
-                chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
+                related to molecular modelling, simulations of protein dynamics and protein-ligand interactions, including steered molecular dynamics 
+	        and free energy landscape calculations. However, I have also participated in other projects for the analysis (and/or code developing for
+		the analysis) of genetic, biochemical, and chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
                 
                 <a href="./cv.pdf" target="_blank">Display standard CV</a>
                 
@@ -91,7 +91,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Molecular modelling & simulations</h6>
-                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock, VINA, CB-Dock, MGLTools,
+                        <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock VINA, CB-Dock, MGLTools,
                         PyMol, Rosetta software, AlphaFold, LIGPLOT, swiss-model, Avogadro, BIOVIA </p>
                         <hr>
                     </div>
