--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="col-10 ml-auto mr-3">
                         <h6>Molecular modelling & simulations</h6>
                         <p class="subtitle"> GROMACS, MDAnalysis, VMD, Chimera UCSF, AutoDock VINA, CB-Dock, MGLTools,
-                        PyMol, Rosetta software, AlphaFold, LIGPLOT, swiss-model, Avogadro, BIOVIA </p>
+                        PyMol, Rosetta software, AlphaFold, RFdiffusion, LIGPLOT, swiss-model, Avogadro, BIOVIA </p>
                         <hr>
                     </div>
                 </div>
