--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">About me</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3"> I like to think of myself as a curious and self-motivated scientist that enjoys discovering things.</h5>
+                <h5 class="mb-3">  I like to think of myself as a curious and self-motivated scientist that enjoys being surprised by biology.</h5>
                 <p class="mt-20"> 
                 I have focused my career on computational tools for the analysis of biomolecular systems. My projects are strongly
                 related to molecular modelling, simulations of protein dynamics and protein-ligand interactions, including steered molecular dynamics 
