--- a/index.html
+++ b/index.html
@@ -115,52 +115,91 @@
         </div>
     </div>
 
-    <!--Resume Section-->
-    <section class="section" id="resume">
-        <div class="container">
-            <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <div class="card">
-                       <div class="card-header">
-                            <div class="mt-2">
-                                <h4>Peer-reviewed publications</h4>
-                                <span class="line"></span>  
-                            </div>
+<!--Resume Section-->
+<section class="section" id="resume">
+    <div class="container">
+        <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Peer-reviewed Publications</h4>
+                            <span class="line"></span>  
                         </div>
-                        <div class="card-body">
-                            <h6 class="title text-danger">2022</h6>
-                            <P></P>
-                            <P class="subtitle">
-                            <strong>Herrera-Rodulfo, A.,</strong>
-                            Andrade-Medina, M., & Carrillo-Tripp, M. (2022).
-                            <strong>Repurposing Drugs as Potential Therapeutics for the SARS-Cov-2 Viral Infection:
-				Automatizing a Blind Molecular Docking High-throughput Pipeline. </strong>
-                            In biomedical Engineering. IntechOpen [Book chapter].
-				https://doi.org/10.5772/intechopen.105792</P>
-				
-				</P>del Rayo Camacho-Corona, M., Camacho-Morales, A.,Góngora-Rivera, F., Escamilla-García, 
-				E., Morales-Landa, J. L., Andrade-Medina, M., <strong>Herrera-Rodulfo, A.,</strong> García-Juárez, M.,
-				García-Espinosa, P., Stefani, T., González-Barranco, P., & Carrillo-Tripp, M. (2022).
-				<strong>Immunomodulatory Effects of Allium sativum L. and its Constituents against Viral Infections
-				and Metabolic Diseases. </strong> 
-				In Current Topics in Medicinal Chemistry (Vol. 22,
-				Issue 2, pp. 109–131). Bentham Science Publishers Ltd.
-				https://doi.org/10.2174/1568026621666211122163156</P>
+                    </div>
+                    <div class="card-body">
+                        <!-- 2025 Publications -->
+                        <h6 class="title text-danger">2025</h6>
+                        <p class="subtitle">
+                            <strong>[Research article, First Author]</strong><br>
+                            Herrera-Rodulfo, A., Andrade-Medina, M., García-Delgado, M.S., & Carrillo-Tripp, M. (In Press, 2025). 
+                            <strong>Extensive In-silico Target-Ligand Conformational Space Sampling of Garlic-Derived Sulfur Compounds Targeting COVID-19 Infection.</strong> 
+                            <em>Journal of Computational Biophysics and Chemistry</em>.
+                        </p>
+                        <p class="subtitle">
+                            <strong>[Research article, Co-Author]</strong><br>
+                            Granados-Tristán, A. L., Carrillo-Tripp, M., Hernández-Luna, C. E., Herrera-Rodulfo, A., González-Escalante, L. A., Arriaga-Guerrero, A. L., Silva-Ramírez, B., Escobedo-Guajardo, B. L., Mercado-Hernández, R., Bermúdez de León, M., & Peñuelas-Urquides, K. (In Press, 2025). 
+                            <strong>Mycobacterium Susceptibility to Ivermectin by Inhibition of eccD3, an ESX-3 Secretion System Component.</strong> 
+                            <em>PLOS Computational Biology</em>.
+                        </p>
+                        <hr>
 
-                            <hr>
-                            <h6 class="title text-danger">2021</h6>
-                            <P></P>
-                            <P class="subtitle">
-                            <strong>Herrera-Rodulfo, A.,</strong>
-                            Carrillo-Tripp, M., Laura Yeverino-Gutierrez, M.,
-				Peñuelas-Urquides, K., Adiene González-Escalante, L., Bermúdez de León, M., &
-				Silva-Ramirez, B. (2021). 
-				<strong>NAT2 polymorphisms associated with the development
-				of hepatotoxicity after first-line tuberculosis treatment in Mexican patients:
-				From genotype to molecular structure characterization. </strong>
-				In Clinica Chimica Acta (Vol. 519, pp. 153–162). 
-				Elsevier BV. https://doi.org/10.1016/j.cca.2021.04.017</P>
+                        <!-- 2022 Publications -->
+                        <h6 class="title text-danger">2022</h6>
+                        <p class="subtitle">
+                            <strong>[Peer-reviewed Book Chapter, First Author]</strong><br>
+                            Herrera-Rodulfo, A., Andrade-Medina, M., & Carrillo-Tripp, M. (2022). 
+                            <strong>Repurposing Drugs as Potential Therapeutics for the SARS-CoV-2 Viral Infection: Automatizing a Blind Molecular Docking High-throughput Pipeline.</strong> 
+                            In <em>Biomedical Engineering</em>. IntechOpen. 
+                            <a href="https://doi.org/10.5772/intechopen.105792" target="_blank">https://doi.org/10.5772/intechopen.105792</a> 
+                            <em>(Free pipeline available on GitHub)</em>.
+                        </p>
+                        <p class="subtitle">
+                            <strong>[Review Article, Co-Author]</strong><br>
+                            del Rayo Camacho-Corona, M., Camacho-Morales, A., Góngora-Rivera, F., Escamilla-García, E., Morales-Landa, J. L., Andrade-Medina, M., Herrera-Rodulfo, A., García-Juárez, M., García-Espinosa, P., Stefani, T., González-Barranco, P., & Carrillo-Tripp, M. (2022). 
+                            <strong>Immunomodulatory Effects of Allium sativum L. and its Constituents Against Viral Infections and Metabolic Diseases.</strong> 
+                            <em>Current Topics in Medicinal Chemistry</em>, 22(2), 109–131. 
+                            <a href="https://doi.org/10.2174/1568026621666211122163156" target="_blank">https://doi.org/10.2174/1568026621666211122163156</a>.
+                        </p>
+                        <hr>
+
+                        <!-- 2021 Publications -->
+                        <h6 class="title text-danger">2021</h6>
+                        <p class="subtitle">
+                            <strong>[Research Article, First Author]</strong><br>
+                            Herrera-Rodulfo, A., Carrillo-Tripp, M., Laura Yeverino-Gutierrez, M., Peñuelas-Urquides, K., Adiene González-Escalante, L., Bermúdez de León, M., & Silva-Ramirez, B. (2021). 
+                            <strong>NAT2 Polymorphisms Associated with the Development of Hepatotoxicity After First-line Tuberculosis Treatment in Mexican Patients: From Genotype to Molecular Structure Characterization.</strong> 
+                            <em>Clinica Chimica Acta</em>, 519, 153–162. 
+                            <a href="https://doi.org/10.1016/j.cca.2021.04.017" target="_blank">https://doi.org/10.1016/j.cca.2021.04.017</a>.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Manuscripts in Preparation Card -->
+                <div class="card mt-4">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Manuscripts in Preparation</h4>
+                            <span class="line"></span>  
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p class="subtitle">
+                            <strong>[Research Article, First Author]</strong><br>
+                            <strong>The Role of Conformational Dynamics Conservation in the Structure-Function Paradigm: A Case Study on the RBD of SARS-CoV-2 Spike Protein Variants.</strong> 
+                            In preparation.
+                        </p>
+                        <p class="subtitle">
+                            <strong>[Research Article, First Author]</strong><br>
+                            <strong>Drug-Target Interaction Miner: A Computational Framework for Protein-Ligand Interaction Analysis Using Modern Artificial Intelligence Architectures and Graph Theory.</strong> 
+                            In preparation.
+                        </p>
+                        <p class="subtitle">
+                            <strong>[Research Article, Co-Author]</strong><br>
+                            <strong>High-Throughput Virtual Screening of Organosulfur Compounds Targeting SARS-CoV-2 Spike Protein: In Silico and In Vitro Analysis.</strong> 
+                            In preparation.
+                        </p>
 
                         </div>
                     </div>
