--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" ></h4>
                 <h1 class="header-title">Aldo Herrera</h1>
-                <h6 class="header-mono" >PhD student in engineering and biomedical physics</h6>
+                <h6 class="header-mono" >PhD in Engineering and biomedical physics</h6>
                 <a href="https://github.com/aldhr" target="_blank">Take a look of my Github</a>
             </div>
         </div>
