--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	        and free energy landscape calculations. However, I have also participated in other projects for the analysis (and/or code developing for
 		the analysis) of genetic, biochemical, and chemical data. Including approaches of machine and deep learning as well as bio- and chemo- informatics.</p>
                 
-                <a href="./cv.pdf" target="_blank">Display standard CV</a>
+                <a href="./AldoHR_CV.pdf" target="_blank">Display standard CV</a>
                 
             </div>
             <div class="col-lg-4 about-card">
