--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with JohnDoe landing page.">
     <meta name="author" content="Devcrud">
-    <title>Aldo Herrera, PhD student</title>
+    <title>Aldo Herrera, PhD</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
@@ -45,7 +45,7 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Aldo Herrera</h5>
-                        <div class="brand-subtitle">PhD student</div>
+                        <div class="brand-subtitle">PhD</div>
                     </li>
                 </ul>
                     </li>
