--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                     </div>
                     <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-lg-start gap-3">
                         <a href="#research" class="btn btn-primary btn-lg">View Research <i class="fas fa-flask ms-2"></i></a>
-                        <a href="./AldoHR_CV.pdf" class="btn btn-light btn-lg" target="_blank">Download CV <i class="fas fa-download ms-2"></i></a>
+                        <a href="./AldoHR_CV(27N).pdf" class="btn btn-light btn-lg" target="_blank">Download CV <i class="fas fa-download ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
@@ -573,7 +573,7 @@
                         </div>
                     </div>
                     
-                    <a href="./AldoHR_CV.pdf" class="btn btn-primary mt-3" target="_blank">
+                    <a href="./AldoHR_CV(27N).pdf" class="btn btn-primary mt-3" target="_blank">
                         <i class="fas fa-file-pdf me-2"></i>View Full CV
                     </a>
                 </div>
