--- a/index.html
+++ b/index.html
@@ -690,7 +690,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h4 class="mb-3 mt-4" style="color: var(--accent-orange);">2025</h4>
-                    
+
+                    <div class="publication-item">
+                        <h5>A Garlic-Derived Lead Compound Targeting SARS-CoV-2 Entry via RBD–ACE2 Disruption</h5>
+                        <p class="text-muted">García-Delgado, M. S., <strong>Herrera-Rodulfo, A.</strong>, Reyes-Melo, K. Y., Mohan, A., Góngora-Rivera, F., Pedroza-Flores, J. A., Paz-González, A. D., Rivera, G., Camacho-Corona, M. del R., & Carrillo-Tripp, M.</p>
+                        <p class="mb-0"><em>Molecules (MDPI)</em> (In Press, 2025)</p>
+                    </div>
+
                     <div class="publication-item">
                         <h5>Extensive In-silico Target-Ligand Conformational Space Sampling of Garlic-Derived Sulfur Compounds Targeting COVID-19 Infection</h5>
                         <p class="text-muted"><strong>Herrera-Rodulfo, A.</strong>, Andrade-Medina, M., García-Delgado, M.S., & Carrillo-Tripp, M.</p>
